--- a/week_01_ml_intro/Homework/hw_1_game_of_thrones.ipynb
+++ b/week_01_ml_intro/Homework/hw_1_game_of_thrones.ipynb
@@ -6,7 +6,8 @@
       "provenance": [],
       "collapsed_sections": [
         "GW9X4s8qWm98"
-      ]
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -26,6 +27,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Voisan/ML-study/blob/main/week_01_ml_intro/Homework/hw_1_game_of_thrones.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -277,10 +288,10 @@
       ],
       "metadata": {
         "id": "1Tv0scrImXTM",
-        "outputId": "c06a3184-bc4c-44a7-a4e5-7d523341bf3b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c06a3184-bc4c-44a7-a4e5-7d523341bf3b"
       },
       "execution_count": 276,
       "outputs": [
@@ -363,11 +374,11 @@
         "data_test['title'].fillna('Unknown', inplace=True)"
       ],
       "metadata": {
-        "id": "MKNH4Y2IVC_W",
-        "outputId": "b9ad6667-7fd9-4e7a-ebb2-6bc477963a9b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MKNH4Y2IVC_W",
+        "outputId": "b9ad6667-7fd9-4e7a-ebb2-6bc477963a9b"
       },
       "execution_count": 278,
       "outputs": [
@@ -527,11 +538,11 @@
         "print(correlation['isAlive'])"
       ],
       "metadata": {
-        "id": "bheJHX7zlxxj",
-        "outputId": "bc360562-8e50-4e0f-aab4-e27bb99e815b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bheJHX7zlxxj",
+        "outputId": "bc360562-8e50-4e0f-aab4-e27bb99e815b"
       },
       "execution_count": 282,
       "outputs": [
@@ -595,11 +606,11 @@
       ],
       "metadata": {
         "id": "sQRo20Bfmxlm",
-        "outputId": "cd0baea6-1c23-4ec0-9b52-958ddfd0e941",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 272
-        }
+        },
+        "outputId": "cd0baea6-1c23-4ec0-9b52-958ddfd0e941"
       },
       "execution_count": 284,
       "outputs": [
@@ -684,12 +695,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "2zBQkXkip1N1",
-        "outputId": "bcaf96b7-11c8-46bb-b387-98c910b8b0f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 675
-        }
+        },
+        "id": "2zBQkXkip1N1",
+        "outputId": "bcaf96b7-11c8-46bb-b387-98c910b8b0f2"
       },
       "execution_count": 285,
       "outputs": [
@@ -744,12 +755,12 @@
         "data.sample()"
       ],
       "metadata": {
-        "id": "Egx1J04buyfO",
-        "outputId": "3ad0cc40-470a-457f-f69c-0c39fd450ba0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 149
-        }
+        },
+        "id": "Egx1J04buyfO",
+        "outputId": "3ad0cc40-470a-457f-f69c-0c39fd450ba0"
       },
       "execution_count": 287,
       "outputs": [
@@ -958,11 +969,11 @@
       ],
       "metadata": {
         "id": "LSqNtjWufhwh",
-        "outputId": "0a45c6fb-765f-4d88-c9b0-5a564df8e108",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 458
-        }
+        },
+        "outputId": "0a45c6fb-765f-4d88-c9b0-5a564df8e108"
       },
       "execution_count": 289,
       "outputs": [
@@ -1112,7 +1123,7 @@
       "metadata": {
         "id": "HASZhG6Pby5X"
       },
-      "execution_count": 292,
+      "execution_count": 324,
       "outputs": []
     },
     {
@@ -1228,10 +1239,10 @@
       ],
       "metadata": {
         "id": "fsoHrG4wb8aw",
-        "outputId": "4b6eba88-7b15-45a8-f9e9-6944f1957474",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4b6eba88-7b15-45a8-f9e9-6944f1957474"
       },
       "execution_count": 295,
       "outputs": [
@@ -1369,10 +1380,10 @@
       ],
       "metadata": {
         "id": "NIMezW7sf7dM",
-        "outputId": "77d88ef6-18a0-4c9a-e10a-6d682c985feb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "77d88ef6-18a0-4c9a-e10a-6d682c985feb"
       },
       "execution_count": 299,
       "outputs": [
@@ -1406,10 +1417,10 @@
       ],
       "metadata": {
         "id": "C2XL3UUOgzuB",
-        "outputId": "35b39a4d-c220-4034-8d7f-f6d58500245c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "35b39a4d-c220-4034-8d7f-f6d58500245c"
       },
       "execution_count": 300,
       "outputs": [
@@ -1431,11 +1442,11 @@
         "print(f\"Accuracy : {accuracy}\")"
       ],
       "metadata": {
-        "id": "dh0UDYlPfdRU",
-        "outputId": "e4cc98f0-7edb-43ea-d3c3-2681e0b69879",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dh0UDYlPfdRU",
+        "outputId": "e4cc98f0-7edb-43ea-d3c3-2681e0b69879"
       },
       "execution_count": 301,
       "outputs": [
