--- a/week_08_semantic_segmentation/Homework/hw_6_semantic_segmentation.ipynb
+++ b/week_08_semantic_segmentation/Homework/hw_6_semantic_segmentation.ipynb
@@ -1176,7 +1176,7 @@
         "        epoch_train_loss = running_loss / len(train_loader)\n",
         "        train_losses.append(epoch_train_loss)\n",
         "\n",
-        "        # Validation phase\n",
+        "        # Valid\n",
         "        model.eval()\n",
         "        val_loss = 0.0\n",
         "        iou_scores = []\n",
@@ -1540,10 +1540,10 @@
       "source": [
         "test_loss, test_iou = test(\n",
         "    model=segnet_model,\n",
-        "    test_loader=test_dataloader,  # Ваш DataLoader для теста\n",
+        "    test_loader=test_dataloader,\n",
         "    criterion=nn.BCEWithLogitsLoss(),\n",
         "    device=device,\n",
-        "    save_path='test_predictions.pt'  # Опционально\n",
+        "    save_path='test_predictions.pt'\n",
         ")"
       ],
       "metadata": {
@@ -1681,7 +1681,6 @@
         "    '''\n",
         "    Это именно метрика, не лосс.\n",
         "    '''\n",
-        "    # TODO\n",
         "    prob=torch.sigmoid(logits)\n",
         "    preds=(prob>threshold).float()\n",
         "    TP=torch.sum(preds*labels)\n",
@@ -1947,11 +1946,11 @@
         "#воспользуемся isclose()"
       ],
       "metadata": {
-        "id": "bgI-Cb-Oy_1_",
-        "outputId": "1efa84b7-ad8b-463d-91a2-96a4054c792c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bgI-Cb-Oy_1_",
+        "outputId": "1efa84b7-ad8b-463d-91a2-96a4054c792c"
       },
       "execution_count": 112,
       "outputs": [
@@ -2202,11 +2201,11 @@
         ")"
       ],
       "metadata": {
-        "id": "jTXoPERf0zFW",
-        "outputId": "a399a068-751d-4df7-d557-c8a314c0b791",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jTXoPERf0zFW",
+        "outputId": "a399a068-751d-4df7-d557-c8a314c0b791"
       },
       "execution_count": 124,
       "outputs": [
@@ -2300,11 +2299,11 @@
         ")"
       ],
       "metadata": {
-        "id": "dYBx2s2b335u",
-        "outputId": "0df53226-cbf4-4791-919c-e56c1514ea08",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dYBx2s2b335u",
+        "outputId": "0df53226-cbf4-4791-919c-e56c1514ea08"
       },
       "execution_count": 123,
       "outputs": [
@@ -2411,11 +2410,11 @@
         ")"
       ],
       "metadata": {
-        "id": "byLLgxTb38QX",
-        "outputId": "f4c19c20-cc83-4ae7-dbeb-93375c406e9d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "byLLgxTb38QX",
+        "outputId": "f4c19c20-cc83-4ae7-dbeb-93375c406e9d"
       },
       "execution_count": 130,
       "outputs": [
@@ -2667,11 +2666,11 @@
         ")"
       ],
       "metadata": {
-        "id": "7Mhf8P9A9Rb1",
-        "outputId": "f4eb3b72-214c-41ab-ca13-eedc7de3b786",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7Mhf8P9A9Rb1",
+        "outputId": "f4eb3b72-214c-41ab-ca13-eedc7de3b786"
       },
       "execution_count": 173,
       "outputs": [
@@ -2889,11 +2888,11 @@
         ")"
       ],
       "metadata": {
-        "id": "NNM8Sfvf9ZpJ",
-        "outputId": "59ea54c5-92d5-426a-e1bb-e7a5e27de8b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NNM8Sfvf9ZpJ",
+        "outputId": "59ea54c5-92d5-426a-e1bb-e7a5e27de8b7"
       },
       "execution_count": 157,
       "outputs": [
@@ -3039,11 +3038,11 @@
         ")"
       ],
       "metadata": {
-        "id": "Eaw3SVYa9_lk",
-        "outputId": "92e027d9-802f-40a9-d7e6-d06adbacb815",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Eaw3SVYa9_lk",
+        "outputId": "92e027d9-802f-40a9-d7e6-d06adbacb815"
       },
       "execution_count": 156,
       "outputs": [
@@ -3139,18 +3138,18 @@
       "source": [
         "test1_loss, test1_iou = test(\n",
         "    model=segnet_model,\n",
-        "    test_loader=test_dataloader,  # Ваш DataLoader для теста\n",
+        "    test_loader=test_dataloader,\n",
         "    criterion=nn.BCEWithLogitsLoss(),\n",
         "    device=device,\n",
-        "    save_path='segtest_predictions.pt'  # Опционально\n",
+        "    save_path='segtest_predictions.pt'\n",
         ")"
       ],
       "metadata": {
-        "id": "A_z3FrK6OyJB",
-        "outputId": "ef0953cc-1252-4b12-b5da-d76321c793e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "A_z3FrK6OyJB",
+        "outputId": "ef0953cc-1252-4b12-b5da-d76321c793e2"
       },
       "execution_count": 161,
       "outputs": [
@@ -3184,18 +3183,18 @@
       "source": [
         "test2_loss, test2_iou = test(\n",
         "    model=unet_model,\n",
-        "    test_loader=test_dataloader,  # Ваш DataLoader для теста\n",
+        "    test_loader=test_dataloader,\n",
         "    criterion=nn.BCEWithLogitsLoss(),\n",
         "    device=device,\n",
-        "    save_path='utest_predictions.pt'  # Опционально\n",
+        "    save_path='utest_predictions.pt'\n",
         ")"
       ],
       "metadata": {
-        "id": "x5Tz_qILPCN_",
-        "outputId": "c9b03ca8-5a1e-4507-97f0-5198aadbcb1a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "x5Tz_qILPCN_",
+        "outputId": "c9b03ca8-5a1e-4507-97f0-5198aadbcb1a"
       },
       "execution_count": 162,
       "outputs": [
@@ -3261,12 +3260,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "2hHspgEVPfCN",
-        "outputId": "11f71c0c-34af-4812-96bc-6618ccd8651a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 310
-        }
+        },
+        "id": "2hHspgEVPfCN",
+        "outputId": "11f71c0c-34af-4812-96bc-6618ccd8651a"
       },
       "execution_count": 171,
       "outputs": [
