--- a/week_09_detection/Homework/homework_detection.ipynb
+++ b/week_09_detection/Homework/homework_detection.ipynb
@@ -370,13 +370,13 @@
         "            for in_channels in in_channels_list\n",
         "        ])\n",
         "\n",
-        "        # Свертки для FPN путей (сверху вниз)\n",
+        "        # Свертки для FPN путей (снизу верх)\n",
         "        self.fpn_convs = nn.ModuleList([\n",
         "            nn.Conv2d(out_channels, out_channels, kernel_size=3, padding=1)\n",
         "            for _ in in_channels_list\n",
         "        ])\n",
         "\n",
-        "        # Свертки для PAN путей (снизу вверх)\n",
+        "        # Свертки для PAN путей (сверху вниз)\n",
         "        self.pan_convs = nn.ModuleList([\n",
         "            nn.Conv2d(out_channels, out_channels, kernel_size=3, padding=1)\n",
         "            for _ in in_channels_list\n",
@@ -386,22 +386,22 @@
         "        self.activation = nn.ReLU() if use_activations else nn.Identity()\n",
         "\n",
         "    def forward(self, features):\n",
-        "        # 1. Пропустим через латеральные конволюции\n",
+        "\n",
         "        features = [lateral_conv(f) for f, lateral_conv in zip(features, self.lateral_convs)]\n",
         "\n",
-        "        # 2. FPN путь: сверху вниз\n",
+        "        # 1. FPN путь\n",
         "        last_inner = features[-1]\n",
         "        fpn_features = [last_inner]\n",
         "        for feature in reversed(features[:-1]):\n",
         "            # Апсемплинг последнего выхода\n",
         "            upsampled = F.interpolate(last_inner, size=feature.shape[-2:], mode=\"nearest\")\n",
         "            last_inner = feature + upsampled\n",
-        "            fpn_features.insert(0, last_inner)  # добавляем слева\n",
+        "            fpn_features.insert(0, last_inner)\n",
         "\n",
-        "        # 3. Прогоняем через 3x3 конволюции\n",
+        "        # 2. Прогоняем через 3x3 конволюции\n",
         "        fpn_features = [self.activation(conv(f)) for f, conv in zip(fpn_features, self.fpn_convs)]\n",
         "\n",
-        "        # 4. PAN путь: снизу вверх\n",
+        "        # 3. PAN путь\n",
         "        pan_features = []\n",
         "        last_out = fpn_features[0]\n",
         "        pan_features.append(last_out)\n",
@@ -410,7 +410,7 @@
         "            last_out = feature + downsampled\n",
         "            pan_features.append(last_out)\n",
         "\n",
-        "        # 5. Прогоняем через 3x3 конволюции после PAN\n",
+        "        # 4. Прогоняем через функция активации\n",
         "        pan_features = [self.activation(conv(f)) for f, conv in zip(pan_features, self.pan_convs)]\n",
         "\n",
         "        return pan_features"
